# spack-playground

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  base.Dockerfile  devcontainer.json  packages.yaml  spack.sh
.github/workflows/: docker-publish.yml
benchmarks/: fio.sh  ior-local.sh  lib.sh  pmem2bench-cygnus.sh  pmem2bench-job.sh  pmem2bench.sh  pmemblkbench-cygnus.sh  pmemblkbench-job.sh  pmemblkbench.sh  pmemblkbench_result_parser.sh  pmemobjbench.sh  rdma.sh
cmake/: ClangTidy.cmake  CompilerWarnings.cmake  FindLibpmemkv.cmake  IncludeWhatYouUse.cmake  Version.cmake
envs/chris8x/: spack.yaml
envs/cygnus/: spack.yaml
envs/dev/: spack.yaml
scripts/: clang-format-all.sh  cmake-format-all.sh  config-RelWithDebInfo.sh  config-clang-RelWithDebInfo.sh  config-clang-debug.sh  config-clang-release.sh  config-debug.sh  config-release.sh  upgrade-cpm.sh
scripts/impl/: cmake-config.sh
spack/envs/dev/: spack.yaml
spack/repos/dev/: repo.yaml
targets/: CMakeLists.txt
targets/apps/argobots_1/: CMakeLists.txt  main.cpp
targets/apps/atomic_bench/: CMakeLists.txt  main.cpp
targets/apps/example_cxxopts/: CMakeLists.txt  main.cpp
targets/apps/example_cxxopts_subcmd/: CMakeLists.txt  main.cpp
targets/apps/hello_thallium_client/: CMakeLists.txt  main.cpp
targets/apps/hello_thallium_server/: CMakeLists.txt  main.cpp
targets/apps/holder_class_example/: CMakeLists.txt  main.cpp
targets/apps/libpmemblk_example/: CMakeLists.txt  main.cpp
targets/apps/mpsc_queue_bench/: CMakeLists.txt  main.cpp
targets/apps/pmem2bench/: CMakeLists.txt  main.cpp
targets/apps/pmem_distributed_counter/: CMakeLists.txt  main.cpp
targets/apps/pmembb_list/: CMakeLists.txt  main.cpp
targets/apps/pmemblkbench/: CMakeLists.txt  main.cpp
targets/apps/pmemkv_1/: CMakeLists.txt  main.cpp
targets/apps/pmemobj_atomic_ops/: CMakeLists.txt  main.cpp
targets/apps/pmemobj_ctl/: CMakeLists.txt  main.cpp  pmemobjctl
targets/apps/pmemobjbench/: CMakeLists.txt  main.cpp
targets/apps/pmemobjstorage/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch10_11_vector_of_string/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch11_4_simplekv/: CMakeLists.txt  main.cpp  simplekv.hpp
targets/apps/ppm_ch11_5_simplekv_rebuild/: CMakeLists.txt  simplekv_rebuild.hpp
targets/apps/ppm_ch11_6_versioning_insert/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch12_1_stackoverflow/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch12_38_out_of_order_bug/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch12_3_leak/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch14_1_counter/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch14_2_counter_fixed_but_still_buggy/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch1_1/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch3_1/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch3_7/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch6_1/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch7_1/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch7_2/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch7_5/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch7_6/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch7_7/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch8_11_containers/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch8_2/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch8_3_allocation/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch8_6_volatile_queue/: CMakeLists.txt  main.cpp
targets/apps/ppm_ch8_7_persistent_queue/: CMakeLists.txt  main.cpp  persistent_queue.hpp
targets/apps/ppm_ch9_2_phonebook/: CMakeLists.txt  main.cpp  pmemkv_config.h
targets/apps/thallium_custom_schedulers_and_pools/: CMakeLists.txt  main.cpp
targets/apps/thallium_failure_detector/: CMakeLists.txt  README.md  main.cpp
targets/apps/thallium_nonblocking/: CMakeLists.txt  main.cpp
targets/apps/thallium_provider/: CMakeLists.txt  main.cpp
targets/apps/thallium_provider2/: CMakeLists.txt  main.cpp
targets/apps/thallium_rdma/: CMakeLists.txt  main.cpp
targets/apps/thallium_rdma2/: CMakeLists.txt  main.cpp
targets/apps/thallium_with_argobot_pools/: CMakeLists.txt  main.cpp
targets/apps/thallium_with_argobot_pools copy/: main.cpp
targets/apps/use_header_only/: CMakeLists.txt  main.cpp
targets/apps/use_library/: CMakeLists.txt  main.cpp
targets/libraries/elapsedtime/: CMakeLists.txt
targets/libraries/elapsedtime/include/: elapsedtime.hpp
targets/libraries/gen_random_string/: CMakeLists.txt
targets/libraries/gen_random_string/include/: gen_random_string.hpp
targets/libraries/hello_header_only/: CMakeLists.txt
targets/libraries/hello_header_only/include/hello_header_only/: hello_header_only.hpp
targets/libraries/hello_thallium/: CMakeLists.txt
targets/libraries/hello_thallium/include/: hello_thallium.hpp
targets/libraries/hello_thallium/include/hello_thallium/: point.hpp  unused.hpp  utils.hpp
targets/libraries/hellolib/: CMakeLists.txt
targets/libraries/hellolib/include/hellolib/: hellolib.hpp
targets/libraries/hellolib/src/: hellolib.cpp
targets/libraries/phi_accrual_fd/: CMakeLists.txt
targets/libraries/phi_accrual_fd/include/phi_accrual_fd/: failure_detector.hpp  window.hpp
targets/libraries/phi_accrual_fd/tests/: CMakeLists.txt  main.cpp
targets/libraries/pretty_bytes/: CMakeLists.txt
targets/libraries/pretty_bytes/include/pretty_bytes/: pretty_bytes.hpp
targets/libraries/psync/: CMakeLists.txt
targets/libraries/psync/include/psync/: barrier.hpp
targets/libraries/sync/: CMakeLists.txt
targets/libraries/sync/include/sync/: barrier.hpp
targets/libraries/synchronized_value/: CMakeLists.txt
targets/libraries/synchronized_value/include/synchronized_value/: synchronized_value.hpp
targets/libraries/synchronized_value/tests/: CMakeLists.txt  main.cpp
targets/libraries/unused/: CMakeLists.txt
tests/: CMakeLists.txt  test_hellolib.cpp  test_pretty_bytes.cpp
