add_subdirectory(libraries/hello_header_only)
add_subdirectory(libraries/hellolib)
add_subdirectory(libraries/hello_thallium)
add_subdirectory(apps/use_library)
add_subdirectory(apps/use_header_only)
add_subdirectory(apps/example_cxxopts)
add_subdirectory(apps/hello_thallium_server)
add_subdirectory(apps/hello_thallium_client)
add_subdirectory(apps/thallium_rdma)
