add_subdirectory(libraries/hello_header_only)
add_subdirectory(libraries/hellolib)
add_subdirectory(libraries/hello_thallium)
add_subdirectory(libraries/elapsedtime)
add_subdirectory(libraries/gen_random_string)
add_subdirectory(apps/use_library)
add_subdirectory(apps/use_header_only)
add_subdirectory(apps/example_cxxopts)
add_subdirectory(apps/hello_thallium_server)
add_subdirectory(apps/hello_thallium_client)
add_subdirectory(apps/thallium_rdma)
add_subdirectory(apps/thallium_rdma2)
add_subdirectory(apps/thallium_provider)
add_subdirectory(apps/thallium_provider2)
add_subdirectory(apps/thallium_with_argobot_pools)
# add_subdirectory(apps/thallium_custom_schedulers_and_pools)
add_subdirectory(apps/thallium_nonblocking)
add_subdirectory(apps/pmemkv_1)
add_subdirectory(apps/ppm_ch1_1)
add_subdirectory(apps/ppm_ch3_1)
add_subdirectory(apps/ppm_ch3_7)
