add_subdirectory(libraries/hello_header_only)
add_subdirectory(libraries/hellolib)
add_subdirectory(libraries/hello_thallium)
add_subdirectory(libraries/elapsedtime)
add_subdirectory(libraries/gen_random_string)
add_subdirectory(libraries/pretty_bytes)
add_subdirectory(libraries/psync)
add_subdirectory(libraries/unused)
add_subdirectory(libraries/phi_accrual_fd)
add_subdirectory(apps/use_library)
add_subdirectory(apps/use_header_only)
add_subdirectory(apps/example_cxxopts)
add_subdirectory(apps/example_cxxopts_subcmd)
add_subdirectory(apps/hello_thallium_server)
add_subdirectory(apps/hello_thallium_client)
add_subdirectory(apps/thallium_rdma)
add_subdirectory(apps/thallium_rdma2)
add_subdirectory(apps/thallium_provider)
add_subdirectory(apps/thallium_provider2)
add_subdirectory(apps/thallium_with_argobot_pools)
# add_subdirectory(apps/thallium_custom_schedulers_and_pools)
add_subdirectory(apps/thallium_nonblocking)
add_subdirectory(apps/thallium_failure_detector)
#add_subdirectory(apps/pmemkv_1)
add_subdirectory(apps/ppm_ch1_1)
add_subdirectory(apps/ppm_ch3_1)
add_subdirectory(apps/ppm_ch3_7)
add_subdirectory(apps/ppm_ch6_1)
add_subdirectory(apps/ppm_ch7_1)
add_subdirectory(apps/ppm_ch7_2)
add_subdirectory(apps/ppm_ch7_5)
add_subdirectory(apps/ppm_ch7_6)
add_subdirectory(apps/ppm_ch7_7)
add_subdirectory(apps/ppm_ch8_2)
add_subdirectory(apps/ppm_ch8_3_allocation)
add_subdirectory(apps/ppm_ch8_6_volatile_queue)
add_subdirectory(apps/ppm_ch8_7_persistent_queue)
add_subdirectory(apps/ppm_ch8_11_containers)
add_subdirectory(apps/ppm_ch9_2_phonebook)
#add_subdirectory(apps/ppm_ch10_11_vector_of_string)
add_subdirectory(apps/ppm_ch11_4_simplekv)
add_subdirectory(apps/ppm_ch11_5_simplekv_rebuild)
add_subdirectory(apps/ppm_ch11_6_versioning_insert)
add_subdirectory(apps/ppm_ch12_1_stackoverflow)
add_subdirectory(apps/ppm_ch12_3_leak)
add_subdirectory(apps/ppm_ch12_38_out_of_order_bug)
add_subdirectory(apps/ppm_ch14_1_counter)
add_subdirectory(apps/ppm_ch14_2_counter_fixed_but_still_buggy)
add_subdirectory(apps/libpmemblk_example)
add_subdirectory(apps/pmemblkbench)
add_subdirectory(apps/pmem2bench)
add_subdirectory(apps/pmemobjbench)
add_subdirectory(apps/pmemobj_ctl)
add_subdirectory(apps/pmemobjstorage)
add_subdirectory(apps/argobots_1)
add_subdirectory(apps/mpsc_queue_bench)
